0x07-python-test_driven_development/tests/0-add_integer.txt
>>> add = __import__('0-add_integer').add_integer
>>>
>>> add(1, 2)
3
>>> add(1.5, 2.5)
3
>>> add("hello", 2)
Traceback (most recent call last):
TypeError: a must be an integer
>>> add(1, "world")
Traceback (most recent call last):
TypeError: b must be an integer
>>> add()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: add_integer() missing 1 required positional argument: 'a'
>>> add(1,)
99
>>> add(,2)
Traceback (most recent call last):
  File "<stdin>", line 1
    add(,2)
        ^
SyntaxError: invalid syntax
>>> add(1, 2, 3)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: add_integer() takes from 1 to 2 positional arguments but 3 were given
>>> add(1a,)
Traceback (most recent call last):
  File "<stdin>", line 1
    add(1a,)
        ^
SyntaxError: invalid decimal literal
